<resources>
    <string name="app_name">MessagingApp</string>

    <string name="error_network">Network not available</string>
    <string name="error">Error occurred, please retry</string>
    <string name="error_login">Wrong username or password</string>
    <string name="error_signup">Username already exists</string>
    <string name="error_query_users">Failed to load users, please retry</string>
    <string name="error_push">Failed to send message</string>
    <string name="error_logout">Failed to logout, please retry</string>
    <string name="b_menu_logout">Logout</string>
    <string name="b_login">Login</string>
    <string name="b_signup">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wait">Please wait...</string>
    <string name="short_name">Username must be at least 6 letters</string>
    <string name="short_pass">Password must be at least 6 letters</string>
    <string name="loadingWheel" translatable="false">Loading wheel animation image</string>
    <string name="message_here">Write message here...</string>
    <string name="send_to">Send to:</string>
    <string name="menu_search">Search</string>
    <string name="notify">Notify</string>
    <string name="b_context_remove">Remove</string>
    <string name="done">Done</string>
    <string name="b_menu_settings">Settings</string>
    <string name="noti_msg_from">Message from</string>

    <plurals name="messages">
        <item quantity="one">%d new message</item>
        <item quantity="other">%d new messages</item>
    </plurals>
    <string name="noti_from">Notification from</string>
    <string name="notified">Requests attention to his conversation</string>
    <string name="wrong_username">Username can contain only a-z and A-Z</string>
</resources>
