<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soft.ams.messagingapp.MainActivity">

    <ImageView
        android:id="@+id/ivRotateWheel"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:contentDescription="@string/loadingWheel"
        android:src="@drawable/loading_spinner"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvLoginActivityError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorRed"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/EditTextLoginActivity"
        android:layout_gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditTextLoginActivity"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bLogin"
            android:layout_width="@dimen/login_signup_buttons_width"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/b_login" />

        <Button
            android:id="@+id/bSignup"
            android:layout_width="@dimen/login_signup_buttons_width"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/b_signup" />
    </FrameLayout>

</LinearLayout>
